# fovea

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
backend/: alembic.ini  probe_cli.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase0_baseline.py  0002_phase1_metadata.py  d8885a54737d_create_watch_sessions_table.py  e9995a54737e_create_tags_tables.py  f2a1b3c4d5e6_create_search_history.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: feed.py  health.py  tags.py  videos.py  watch.py  watch_paths.py
backend/app/api/schemas/: __init__.py  feed.py  tag.py  video.py  watch_path.py  watch_session.py
backend/app/core/: config.py  range_stream.py
backend/app/db/: session.py
backend/app/models/: __init__.py  job.py  search_history.py  tag.py  video.py  video_probe.py  watch_path.py  watch_session.py
backend/app/services/: __init__.py  filesystem_watcher.py  job_service.py  probe_service.py  probe_worker.py  recommendation_service.py  reconciliation_worker.py  scan_service.py  similarity_service.py  tokenization.py  video_scanner.py
backend/tests/: conftest.py  test_feed.py  test_recommendation_signals.py  test_search_history.py  test_similarity.py  test_tags.py  test_videos.py  test_watch.py
docker/: entrypoint.sh
docs/: api.md  architecture.md  database.md  decisions.md  phases.md  prd.md  recommendation-pipeline.md  similarity-service.md
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+28 files in other folders)
