[project]
name = "fovea-backend"
version = "0.1.0"
description = "FastAPI backend for Fovea"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

